--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_predmet_1"
+        android:roundIcon="@drawable/icon_android"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEgeHelper100ball">
         <activity
             android:name=".NavigationActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyEgeHelper100ball.NoActionBar">
+            android:theme="@style/Theme.MyEgeHelper100ball.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
